--- a/lib/l10n/app_mn.arb
+++ b/lib/l10n/app_mn.arb
@@ -6,5 +6,5 @@
     "alreadyHaveAnAccount": "Бүртгэлтэй юу ? ",
     "dontHaveanAccount": "Бүртгүүлэх үү ? ",
     "phoneNumber": "Утасны дугаар",
-    "password": "Нууц үг",
+    "password": "Нууц үг"
 }
