added org time table and price table room list pages

--- a/lib/l10n/app_mn.arb
+++ b/lib/l10n/app_mn.arb
@@ -6,5 +6,7 @@
     "alreadyHaveAnAccount": "Бүртгэлтэй юу ? ",
     "dontHaveanAccount": "Бүртгүүлэх үү ? ",
     "phoneNumber": "Утасны дугаар",
-    "password": "Нууц үг"
+    "password": "Нууц үг",
+    "next": "Дараагийн",
+    "cancel": "Болих"
 }
