--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,5 +6,7 @@
     "alreadyHaveAnAccount": "Already have an Account?",
     "dontHaveanAccount": "Don't have an Account?",
     "phoneNumber": "Your Phone",
-    "password": "Password"
+    "password": "Password",
+    "next": "Next",
+    "cancel": "Cancel"
 }
